Fix a cuppla bugs on mobile

--- a/ui/static/app.css
+++ b/ui/static/app.css
@@ -117,7 +117,7 @@ button {
 }
 
 #keyboard button {
-  font-size: 20px;
+  font-size: 24px;
   border: none;
   text-transform: uppercase;
   line-height: 2;
@@ -127,7 +127,7 @@ button {
   justify-content: center;
   align-items: center;
   padding: 0;
-  padding-inline: 5px;
+  padding-inline: 14px;
 }
 
 #keyboard button[value="backspace"] {
